Exclamation mark removed

--- a/mtm1531/assignment-0/index.html
+++ b/mtm1531/assignment-0/index.html
@@ -9,7 +9,7 @@
 	
 		<h1>Assignment Zero</h1>
 		
-		<p>Automated deployment rocks!!</p>
+		<p>Automated deployment rocks!</p>
 	
     </body>
 </html>
