hated my life after wasting four hours on this.

--- a/mtm1526/assignment-2/index.html
+++ b/mtm1526/assignment-2/index.html
@@ -7,7 +7,10 @@
 	</head>
 	
 	<body>
-	<input type="text" id="new-to-to">
+		<ul>
+		<input type="text" id="new-to-to">
+		<button id="add-to-list">add</button>
+		</ul>
 	
 	<script src="js/general.js"></script>
 	</body>
