playing around with variable functions - created one for adding and removing class names

--- a/mtm1526/assignment-2/index.html
+++ b/mtm1526/assignment-2/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<ul>
 		<input type="text" id="new-to-to">
-		<button id="add-to-list">add</button>
+		<button id="add-to-list">Add</button>
 		</ul>
 	
 	<script src="js/general.js"></script>
