.js - attempts to loop click failed.
.html - added div

.css - added css.  Noted that javascript does not put the new lis into the div tag.

--- a/mtm1526/assignment-2/index.html
+++ b/mtm1526/assignment-2/index.html
@@ -7,11 +7,15 @@
 	</head>
 	
 	<body>
-		<ul>
-		<input type="text" id="new-to-to">
-		<button id="add-to-list">Add</button>
-		</ul>
+		<div>
+			<h1>To do List</h1>
+			<ul>
+			<input type="text" id="new-to-to">
+			<button id="add-to-list">Add</button>
+			<script src="js/general.js"></script>
+			</ul>
+		</div>
 	
-	<script src="js/general.js"></script>
+	
 	</body>
 </html>
