--- a/mtm1526/assignment-3/index.html
+++ b/mtm1526/assignment-3/index.html
@@ -7,7 +7,24 @@
 	</head>
 
 	<body>
-	
+		<form >
+			<label for="property">Property</label>
+			<select id="property" name="property">
+				<option value="border-color">Border Color</option>
+				<option value="background-color">Background Color</option>
+				<option value="color">Color</option>
+			</select>
+			
+			<label for="color-box">Color</label>
+			<input type="color" id="color-box">
+			
+			<button id="apply">Apply</button>
+			<button id="hide-show">Hide/Show</button>
+		
+		</form>
+		<div class="circ">
+			<h1>a</h1>
+		</div>
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 		<script src="js/simple-app.js"></script>
