added h1 to html
css - added body and html css

--- a/mtm1526/assignment-3/index.html
+++ b/mtm1526/assignment-3/index.html
@@ -7,20 +7,22 @@
 	</head>
 
 	<body>
+		
+		<h1>Change the color of all parts of the circle, then hide and show it</h1>
 		<form >
 			<label for="property">Property</label>
 			<select id="property" name="property">
 				<option value="border-color">Border Color</option>
 				<option value="background-color">Background Color</option>
 				<option value="color">Color</option>
-			</select>
-			
+				</select>
+				
 			<label for="color-box">Color</label>
 			<input type="color" id="color-box">
-			
+				
 			<button id="apply">Apply</button>
 			<button id="hide-show">Hide/Show</button>
-		
+			
 		</form>
 		<div class="circ">
 			<h1>a</h1>
