added two pages and an ineffective css file

--- a/mtm1526/assignment-4/index.html
+++ b/mtm1526/assignment-4/index.html
@@ -2,11 +2,17 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Intro to AJAX</title>
+	<title>AJAX tabs</title>
+	<link href="css/general.css" rel="stylesheet">
 </head>
 <body>
-	<button id="gethtml">Get some HTML</button>
+	<div >
+	<button id="getahtml" class="buttons">Alpha Male</button>
 	<input id="sendme">
+	<button id="getbhtml" class="buttons">Betas</button>
+	<input id="sendme">
+	
+	<div>
 	
 	<div id="fillme"></div>
 	
