added divs and css

--- a/mtm1526/assignment-4/index.html
+++ b/mtm1526/assignment-4/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title>AJAX tabs</title>
-	<link href="css/general.css" rel="stylesheet">
-</head>
-<body>
-	<div >
-	<button id="getahtml" class="buttons">Alpha Male</button>
-	
-	<button id="getbhtml" class="buttons">Betas</button>
+	<head>
+		<meta charset="utf-8">
+		<title>AJAX tabs</title>
+		<link href="css/general.css" rel="stylesheet">
+	</head>
 	
 	
-	<div>
-	
-	<div id="fillme"></div>
-	
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	<script src="js/intro-to-ajax.js"></script>
-</body>
+	<body>
+		<div id="total">
+			<div >
+			<button id="getahtml" class="buttons">Alpha Male</button>
+			
+			<button id="getbhtml" class="buttons">Betas</button>
+			
+			
+			<div>
+			
+			<div id="fillme"></div>
+		
+		</div>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+		<script src="js/intro-to-ajax.js"></script>
+	</body>
 </html>
