added c and d.html edited paragraph b.html added padding to a div class added linking logic for c and d.html in the js file

--- a/mtm1526/assignment-4/b.html
+++ b/mtm1526/assignment-4/b.html
@@ -6,6 +6,6 @@
 </head>
 
 <body>
-<p> His Betas are Cravenchiel and Velzontor (propably), his right hands.</p>
+<p> His Betas are Cravenchiel and one other (N/A). They are the seconds in command.</p>
 </body>
 </html>
