--- a/mtm1526/assignment-4/index.html
+++ b/mtm1526/assignment-4/index.html
@@ -14,6 +14,10 @@
 			
 			<button id="getbhtml" class="buttons">Betas</button>
 			
+			<button id="getchtml" class="buttons">Gammas</button>
+			
+			<button id="getdhtml" class="buttons">Omegas</button>
+			
 			
 			<div>
 			
