--- a/mtm1526/assignment-4/index.html
+++ b/mtm1526/assignment-4/index.html
@@ -25,6 +25,6 @@
 		
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-		<script src="js/intro-to-ajax.js"></script>
+		<script src="js/load-pages.js"></script>
 	</body>
 </html>
