changed html content to reflex planets instead of story. Edited css.

--- a/mtm1526/assignment-4/a.html
+++ b/mtm1526/assignment-4/a.html
@@ -6,6 +6,6 @@
 </head>
 
 <body>
-<p> This is the Alpha Male, Xelinglight, also known as <strong>Yertough</strong> from the series "The Boy, The Bird and The Beast" by Lightsyde.</p>
+<p> Mercury (0.4 AU from the Sun) is the closest planet to the Sun and the smallest planet in the Solar System (0.055 Earth masses). Mercury has no natural satellites, and its only known geological features besides impact craters are lobed ridges or rupes, probably produced by a period of contraction early in its history. Mercury's almost negligible atmosphere consists of atoms blasted off its surface by the solar wind. Its relatively large iron core and thin mantle have not yet been adequately explained. Hypotheses include that its outer layers were stripped off by a giant impact, and that it was prevented from fully accreting by the young Sun's energy.</p>
 </body>
 </html>
