--- a/mtm1526/assignment-4/index.html
+++ b/mtm1526/assignment-4/index.html
@@ -9,14 +9,14 @@
 	
 	<body>
 		<div id="total">
-			<div >
-			<button id="getahtml" class="buttons">Alpha Male</button>
+			<div id="all-buttons">
+			<button id="getahtml" class="buttons">Mercury</button>
 			
-			<button id="getbhtml" class="buttons">Betas</button>
+			<button id="getbhtml" class="buttons">Venus</button>
 			
-			<button id="getchtml" class="buttons">Gammas</button>
+			<button id="getchtml" class="buttons">Earth</button>
 			
-			<button id="getdhtml" class="buttons">Omegas</button>
+			<button id="getdhtml" class="buttons">Mars</button>
 			
 			
 			<div>
