--- a/mtm1526/assignment-4/d.html
+++ b/mtm1526/assignment-4/d.html
@@ -6,6 +6,6 @@
 </head>
 
 <body>
-	<p>All the trainees on the ship are the Omegas.</p>
+	<p>    Mars (1.5 AU from the Sun) is smaller than Earth and Venus (0.107 Earth masses). It possesses an atmosphere of mostly carbon dioxide with a surface pressure of 6.1 millibars (roughly 0.6 percent that of the Earth's). Its surface, peppered with vast volcanoes such as Olympus Mons and rift valleys such as Valles Marineris, shows geological activity that may have persisted until as recently as 2 million years ago. Its red colour comes from iron oxide (rust) in its soil. Mars has two tiny natural satellites (Deimos and Phobos) thought to be captured asteroids. .</p>
 </body>
 </html>
