--- a/mtm1526/assignment-5/index.html
+++ b/mtm1526/assignment-5/index.html
@@ -25,8 +25,8 @@
 			</ul>
 		</div>
 		<div>
-			<label for="e-mail">E-mail</label>
-			<input type="email" id="e-mail" name="e-mail" required>
+			<label for="email">E-mail</label>
+			<input type="email" id="email" name="email" required>
 			
 		</div>
 	</form>
