--- a/mtm1526/assignment-5/index.html
+++ b/mtm1526/assignment-5/index.html
@@ -27,7 +27,7 @@
 		<div>
 			<label for="email">E-mail</label>
 			<input type="email" id="email" name="email" required>
-			
+			<strong class="email-available" data-status="unchecked">Available</strong>
 		</div>
 	</form>
 
