added city field

--- a/mtm1526/assignment-5/index.html
+++ b/mtm1526/assignment-5/index.html
@@ -29,6 +29,11 @@
 			<input type="email" id="email" name="email" required>
 			<strong class="email-available" data-status="unchecked">Available</strong>
 		</div>
+		<div>
+			<label for="city">City</label>
+			<input id="city" name="city" required>
+			
+		</div>
 	</form>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
