city validation achieved

--- a/mtm1526/assignment-5/index.html
+++ b/mtm1526/assignment-5/index.html
@@ -32,7 +32,10 @@
 		<div>
 			<label for="city">City</label>
 			<input id="city" name="city" required>
-			
+			<strong>City requirements</strong>
+			<ul class="city-reqs">
+				<li class="city-lowerupper">lowercase and uppercase letters only</li>
+			</ul>
 		</div>
 	</form>
 
