refined city validation

--- a/mtm1526/assignment-5/index.html
+++ b/mtm1526/assignment-5/index.html
@@ -35,6 +35,7 @@
 			<strong>City requirements</strong>
 			<ul class="city-reqs">
 				<li class="city-lowerupper">lowercase and uppercase letters only</li>
+				<li class="city-num-symbol">no numbers and no symbols</li>
 			</ul>
 		</div>
 	</form>
