--- a/mtm1526/assignment-5/index.html
+++ b/mtm1526/assignment-5/index.html
@@ -12,6 +12,8 @@
 			<input id="username" name="username" required>
 			<strong class="user-available" data-status="unchecked">Available</strong>
 		</div>
+		
+		
 		<div>
 			<label for="password">Password</label>
 			<input type="password" id="password" name="password" required>
@@ -24,11 +26,15 @@
 				<li class="pass-symbol">1 symbol</li>
 			</ul>
 		</div>
+		
+		
 		<div>
 			<label for="email">E-mail</label>
 			<input type="email" id="email" name="email" required>
 			<strong class="email-available" data-status="unchecked">Available</strong>
 		</div>
+		
+		
 		<div>
 			<label for="city">City</label>
 			<input id="city" name="city" required>
@@ -37,6 +43,15 @@
 				<li class="city-lowerupper">lowercase and uppercase letters only</li>
 				<li class="city-num-symbol">no numbers and no symbols</li>
 			</ul>
+		</div>
+		
+		<div>
+			<fieldset>
+				<input type="radio" name="country" id="country" value="canada">
+				<label for="canada">Canada</label>
+				<input type="radio" name="country" id="country" value="us">
+				<label for="us">Us</label>
+			</fieldset>
 		</div>
 	</form>
 
