--- a/mtm1526/assignment-5/index.html
+++ b/mtm1526/assignment-5/index.html
@@ -47,12 +47,13 @@
 		
 		<div>
 			<fieldset>
-				<input type="radio" name="country" id="country" value="canada">
+				<input type="radio" name="country" id="country" value="canada" class="countries">
 				<label for="canada">Canada</label>
-				<input type="radio" name="country" id="country" value="us">
+				<input type="radio" name="country" id="country" value="us" class="countries">
 				<label for="us">Us</label>
 			</fieldset>
 		</div>
+		<div id="filladdress"></div>
 	</form>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
