--- a/mtm1526/assignment-5/index.html
+++ b/mtm1526/assignment-5/index.html
@@ -54,6 +54,8 @@
 			</fieldset>
 		</div>
 		<div id="filladdress"></div>
+		
+		<button type="submit">Submit</button>
 	</form>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
